@@ -2923,7 +2923,10 @@ public:
         Hides the specified column.
 
         To show the column later you need to call SetColSize() with non-0
-        width or ShowCol().
+        width or ShowCol() to restore the previous column width.
+
+        Notice that this method shouldn't be called if the column is already
+        hidden.
 
         @param col
             The column index.
@@ -2932,6 +2935,12 @@ public:
 
     /**
         Shows the previously hidden column by resizing it to non-0 size.
+
+        The column is shown again with the same width that it had before
+        HideCol() call.
+
+        Notice that this method shouldn't be called if the column is not
+        currently hidden.
 
         @see HideCol(), SetColSize()
      */
@@ -2994,7 +3003,7 @@ public:
         Hides the specified row.
 
         To show the row later you need to call SetRowSize() with non-0
-        width or ShowRow().
+        width or ShowRow() to restore its original height.
 
         @param col
             The row index.
@@ -3002,7 +3011,10 @@ public:
     void HideRow(int col);
 
     /**
-        Shows the previously hidden row by resizing it to non-0 size.
+        Shows the previously hidden row.
+
+        The row is shown again with the same height that it had before
+        HideRow() call.
 
         @see HideRow(), SetRowSize()
      */
